fixing navbar on mobile

--- a/styles/body_style.css
+++ b/styles/body_style.css
@@ -3,7 +3,11 @@ p {
 }
 
 
+html,body
+{
 
+    overflow-x: hidden;
+}
 
 .row {
     margin-bottom: 5%;
